Fix gradle script version

--- a/project-properties.gradle
+++ b/project-properties.gradle
@@ -7,7 +7,7 @@ project.ext {
     publishRepo = "https://maven.pkg.github.com/reportportal/service-authorization"
     dependencyRepos = ["commons-dao", "commons-rules", "commons-model", "commons-bom"]
     releaseMode = project.hasProperty("releaseMode")
-    scriptsUrl = commonScriptsUrl + (releaseMode ? getProperty('scripts.version') : '5.5')
+    scriptsUrl = commonScriptsUrl + (releaseMode ? getProperty('scripts.version') : 'develop')
     isDebugMode = System.getProperty("DEBUG", "false") == "true"
 }
 
