--- a/build.gradle
+++ b/build.gradle
@@ -98,6 +98,10 @@ dependencies {
     implementation 'ch.qos.logback:logback-classic:1.2.13'
     implementation 'ch.qos.logback:logback-core:1.2.13'
 
+    // logstash-logback-encoder for net.logstash.logback.encoder.LoggingEventCompositeJsonEncoder
+    // used for json logging in logback-spring.xml
+    implementation 'net.logstash.logback:logstash-logback-encoder:7.2'
+
     implementation 'org.apache.tika:tika-core'
 
     implementation 'javax.inject:javax.inject:1'
